[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = ""
authors = ["Kanisorn Sutham <firstziiz.k@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.2"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
